@@ -2,32 +2,51 @@ package oryanmoshe.kafka.connect.util;
 
 import io.debezium.spi.converter.CustomConverter;
 import io.debezium.spi.converter.RelationalColumn;
+import org.apache.kafka.connect.data.SchemaBuilder;
 
-import java.text.SimpleDateFormat;
 import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
+import java.util.Arrays;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import java.util.TimeZone;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
-import org.apache.kafka.connect.data.SchemaBuilder;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TimestampConverter implements CustomConverter<SchemaBuilder, RelationalColumn> {
 
-    private static final Map<String, String> MONTH_MAP = Map.ofEntries(Map.entry("jan", "01"), Map.entry("feb", "02"),
-            Map.entry("mar", "03"), Map.entry("apr", "04"), Map.entry("may", "05"), Map.entry("jun", "06"),
-            Map.entry("jul", "07"), Map.entry("aug", "08"), Map.entry("sep", "09"), Map.entry("oct", "10"),
-            Map.entry("nov", "11"), Map.entry("dec", "12"));
-    public static final int MILLIS_LENGTH = 13;
+    private static final Logger log = LoggerFactory.getLogger(TimestampConverter.class);
+
+    private static final Map<String, String> MONTH_MAP = new HashMap<>();
+
+    static {
+        MONTH_MAP.put("jan", "01");
+        MONTH_MAP.put("feb", "02");
+        MONTH_MAP.put("mar", "03");
+        MONTH_MAP.put("apr", "04");
+        MONTH_MAP.put("may", "05");
+        MONTH_MAP.put("jun", "06");
+        MONTH_MAP.put("jul", "07");
+        MONTH_MAP.put("aug", "08");
+        MONTH_MAP.put("sep", "09");
+        MONTH_MAP.put("oct", "10");
+        MONTH_MAP.put("nov", "11");
+        MONTH_MAP.put("dec", "12");
+    }
+
+    public static final int MILLIS_LENGTH = 10;
 
     public static final String DEFAULT_DATETIME_FORMAT = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'";
     public static final String DEFAULT_DATE_FORMAT = "YYYY-MM-dd";
     public static final String DEFAULT_TIME_FORMAT = "HH:mm:ss.SSS";
 
-    public static final List<String> SUPPORTED_DATA_TYPES = List.of("date", "time", "datetime", "timestamp",
+    public static final List<String> SUPPORTED_DATA_TYPES = Arrays.asList("date", "time", "datetime", "timestamp",
             "datetime2");
 
     private static final String DATETIME_REGEX = "(?<datetime>(?<date>(?:(?<year>\\d{4})-(?<month>\\d{1,2})-(?<day>\\d{1,2}))|(?:(?<day2>\\d{1,2})\\/(?<month2>\\d{1,2})\\/(?<year2>\\d{4}))|(?:(?<day3>\\d{1,2})-(?<month3>\\w{3})-(?<year3>\\d{4})))?(?:\\s?T?(?<time>(?<hour>\\d{1,2}):(?<minute>\\d{1,2}):(?<second>\\d{1,2})\\.?(?<milli>\\d{0,7})?)?))";
@@ -36,68 +55,56 @@ public class TimestampConverter implements CustomConverter<SchemaBuilder, Relati
     public String strDatetimeFormat, strDateFormat, strTimeFormat;
     public Boolean debug;
 
-//    private final SchemaBuilder datetimeSchema = SchemaBuilder.string().optional().name("oryanmoshe.time.DateTimeString");
+    private SchemaBuilder datetimeSchema = SchemaBuilder.string().optional().name("oryanmoshe.time.DateTimeString");
 
-    private SimpleDateFormat simpleDatetimeFormatter, simpleDateFormatter, simpleTimeFormatter;
+    private DateTimeFormatter simpleDatetimeFormatter, simpleDateFormatter, simpleTimeFormatter;
 
     @Override
-    public void configure(Properties props) {
+    public void configure(final Properties props) {
         this.strDatetimeFormat = props.getProperty("format.datetime", DEFAULT_DATETIME_FORMAT);
-        this.simpleDatetimeFormatter = new SimpleDateFormat(this.strDatetimeFormat);
+        this.simpleDatetimeFormatter = DateTimeFormatter.ofPattern(this.strDatetimeFormat);
 
         this.strDateFormat = props.getProperty("format.date", DEFAULT_DATE_FORMAT);
-        this.simpleDateFormatter = new SimpleDateFormat(this.strDateFormat);
+        this.simpleDateFormatter = DateTimeFormatter.ofPattern(this.strDateFormat);
 
         this.strTimeFormat = props.getProperty("format.time", DEFAULT_TIME_FORMAT);
-        this.simpleTimeFormatter = new SimpleDateFormat(this.strTimeFormat);
+        this.simpleTimeFormatter = DateTimeFormatter.ofPattern(this.strTimeFormat);
 
         this.debug = props.getProperty("debug", "false").equals("true");
 
-        this.simpleDatetimeFormatter.setTimeZone(TimeZone.getTimeZone("UTC"));
-        this.simpleTimeFormatter.setTimeZone(TimeZone.getTimeZone("UTC"));
-
-        if (this.debug)
-            System.out.printf(
-                    "[TimestampConverter.configure] Finished configuring formats. this.strDatetimeFormat: %s, this.strTimeFormat: %s%n",
-                    this.strDatetimeFormat, this.strTimeFormat);
+        if (this.debug) {
+            log.info("[TimestampConverter.configure] Finished configuring formats: this.strDatetimeFormat: {}, this.strTimeFormat: {}",
+                this.strDatetimeFormat, this.strTimeFormat);
+        }
     }
 
     @Override
-    public void converterFor(RelationalColumn column, ConverterRegistration<SchemaBuilder> registration) {
-        if (this.debug)
-            System.out.printf(
-                    "[TimestampConverter.converterFor] Starting to register column. column.name: %s, column.typeName: %s, column.hasDefaultValue: %s, column.defaultValue: %s, column.isOptional: %s%n",
-                    column.name(), column.typeName(), column.hasDefaultValue(), column.defaultValue(), column.isOptional());
-        if (SUPPORTED_DATA_TYPES.stream().anyMatch(s -> s.equalsIgnoreCase(column.typeName()))) {
-            boolean isTime = "time".equalsIgnoreCase(column.typeName());
-            // Use a new SchemaBuilder every time in order to avoid changing "Already set" options
-            // in the schema builder between tables.
-            registration.register(SchemaBuilder.string().optional(), rawValue -> {
-                if (rawValue == null) {
-                    // DEBUG
-                    if (this.debug) {
-                        System.out.printf("[TimestampConverter.converterFor] rawValue of %s is null.%n", column.name());
-                    }
+    public void converterFor(final RelationalColumn column, final ConverterRegistration<SchemaBuilder> registration) {
+        if (this.debug) {
+            log.info("[TimestampConverter.converterFor] Starting to register column. column.name: {}, column.typeName: {}", column.name(),
+                column.typeName());
+        }
 
-                    if (column.isOptional()) {
-                        return null;
-                    }
-                    else if (column.hasDefaultValue()) {
-                        return column.defaultValue();
-                    }
-                    return rawValue;
+        if (SUPPORTED_DATA_TYPES.stream().anyMatch(s -> s.equalsIgnoreCase(column.typeName()))) {
+            final boolean isTime = "time".equalsIgnoreCase(column.typeName());
+            registration.register(datetimeSchema, rawValue -> {
+                if (rawValue == null) {
+                    return null;
                 }
 
-                Long millis = getMillis(rawValue.toString(), isTime);
-                if (millis == null)
+                final Long millis = getMillis(rawValue.toString(), isTime);
+                if (millis == null) {
                     return rawValue.toString();
+                }
 
-                Instant instant = Instant.ofEpochMilli(millis);
-                Date dateObject = Date.from(instant);
-                if (this.debug)
-                    System.out.printf(
-                            "[TimestampConverter.converterFor] Before returning conversion. column.name: %s, column.typeName: %s, millis: %d%n",
-                            column.name(), column.typeName(), millis);
+                final Instant instant = Instant.ofEpochMilli(millis);
+                final LocalDateTime dateObject = LocalDateTime.ofInstant(instant, ZoneOffset.UTC);
+
+                if (this.debug) {
+                    log.info("[TimestampConverter.converterFor] Before returning conversion. column.name: {}, column.typeName: {}, millis: {}\n",
+                        column.name(), column.typeName(), millis);
+                }
+
                 switch (column.typeName().toLowerCase()) {
                     case "time":
                         return this.simpleTimeFormatter.format(dateObject);
@@ -110,40 +117,48 @@ public class TimestampConverter implements CustomConverter<SchemaBuilder, Relati
         }
     }
 
-    private Long getMillis(String timestamp, boolean isTime) {
-        if (timestamp.isBlank())
+    private Long getMillis(final String timestamp, final boolean isTime) {
+        if (timestamp != null && timestamp.isEmpty()) {
             return null;
+        }
 
         if (timestamp.contains(":") || timestamp.contains("-")) {
             return milliFromDateString(timestamp);
         }
 
-        int excessLength = timestamp.length() - MILLIS_LENGTH;
-        long longTimestamp = Long.parseLong(timestamp);
+        final int excessLength = timestamp.length() - MILLIS_LENGTH;
+        final long longTimestamp = Long.parseLong(timestamp);
 
-        if (isTime)
+        if (isTime) {
             return longTimestamp;
+        }
 
-        if (excessLength < 0)
+        if (excessLength < 0) {
             return longTimestamp * 24 * 60 * 60 * 1000;
+        }
 
-        long millis = longTimestamp / (long) Math.pow(10, excessLength);
-        return millis;
+        if (excessLength == 3) {
+            return longTimestamp;
+        }
+
+        final long millis = longTimestamp / (long) Math.pow(10, excessLength);
+
+        return millis * 1000L;
     }
 
-    private Long milliFromDateString(String timestamp) {
-        Matcher matches = regexPattern.matcher(timestamp);
+    private Long milliFromDateString(final String timestamp) {
+        final Matcher matches = regexPattern.matcher(timestamp);
 
         if (matches.find()) {
-            String year = (matches.group("year") != null ? matches.group("year")
+            final String year = (matches.group("year") != null ? matches.group("year")
                     : (matches.group("year2") != null ? matches.group("year2") : matches.group("year3")));
             String month = (matches.group("month") != null ? matches.group("month")
                     : (matches.group("month2") != null ? matches.group("month2") : matches.group("month3")));
-            String day = (matches.group("day") != null ? matches.group("day")
+            final String day = (matches.group("day") != null ? matches.group("day")
                     : (matches.group("day2") != null ? matches.group("day2") : matches.group("day3")));
-            String hour = matches.group("hour") != null ? matches.group("hour") : "00";
-            String minute = matches.group("minute") != null ? matches.group("minute") : "00";
-            String second = matches.group("second") != null ? matches.group("second") : "00";
+            final String hour = matches.group("hour") != null ? matches.group("hour") : "00";
+            final String minute = matches.group("minute") != null ? matches.group("minute") : "00";
+            final String second = matches.group("second") != null ? matches.group("second") : "00";
             String milli = matches.group("milli") != null ? matches.group("milli") : "000";
 
             if (milli.length() > 3)
@@ -164,7 +179,7 @@ public class TimestampConverter implements CustomConverter<SchemaBuilder, Relati
                 dateStr = String.format("%s-%s-%sT%sZ", "2020", "01", "01", dateStr);
             }
 
-            Date dateObj = Date.from(Instant.parse(dateStr));
+            final Date dateObj = Date.from(Instant.parse(dateStr));
             return dateObj.getTime();
         }
 
